修改Xxhash实现